bugfix box shadow visibility

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -275,22 +275,18 @@ body {
   }
 }
 
-.rte-backdrop {
-  background-color: rgba(0, 0, 0, 0.12);
-  z-index: 10000;
-}
 .backdrop-transparent {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0)
 }
-.dialog-container-transparent {
-  background: none;
 
+.dialog-container-transparent {
+  background-color: rgba(0, 0, 0, 0);
   .mat-dialog-container {
     display      : block;
     padding      : 0;
     border-radius: 0;
     box-sizing   : border-box;
-    overflow     : hidden;
+    overflow     : visible;
     outline      : 0;
     width        : 100%;
     height       : 100%;
